--- a/MiraclePack/app/src/main/res/layout/activity_main.xml
+++ b/MiraclePack/app/src/main/res/layout/activity_main.xml
@@ -52,4 +52,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <FrameLayout
+        android:id="@+id/fragment_loginpage"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
