--- a/MiraclePack/app/src/main/res/values/colors.xml
+++ b/MiraclePack/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="backgroundColor">#E2E2E2</color>
     <color name="grey">#d9d9d9</color>
     <color name="green">#98FB98</color>
+    <color name="red">#FF0000</color>
     <color name="textColor">#2A2A2A</color>
     <color name="houseStyleColor">#61B2AD</color>
 </resources>
