Added housestyle colors to the login pages and added private to the variables in homefragment

--- a/MiraclePack/app/src/main/res/layout/fragment_loginpage.xml
+++ b/MiraclePack/app/src/main/res/layout/fragment_loginpage.xml
@@ -45,9 +45,9 @@
             android:layout_height="51dp"
             android:layout_marginStart="113dp"
             android:layout_marginTop="332dp"
-            android:background="#D9D9D9"
+            android:background="@color/houseStyleColor"
             android:text="@string/inloggen"
-            android:textColor="#323232"
+            android:textColor="@color/white"
             android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/password"
@@ -58,13 +58,15 @@
         <!-- Wachtwoord vergeten button -->
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonPasswordReset"
-            android:layout_width="227dp"
+            android:layout_width="256dp"
             android:layout_height="48dp"
-            android:layout_marginStart="72dp"
+            android:layout_marginStart="60dp"
             android:layout_marginTop="56dp"
             android:text="@string/wachtwoord_vergeten"
             android:textSize="15sp"
             android:textStyle="bold"
+            android:background="@color/houseStyleColor"
+            android:textColor="@color/white"
             android:onClick="openPasswordResetFragment"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
@@ -78,6 +80,8 @@
             android:layout_marginStart="60dp"
             android:layout_marginTop="112dp"
             android:onClick="openSignUpActivity"
+            android:background="@color/houseStyleColor"
+            android:textColor="@color/white"
             android:text="@string/nieuw_account_aanmaken"
             android:textSize="15sp"
             android:textStyle="bold"
