--- a/MiraclePack/app/src/main/res/layout/fragment_signup.xml
+++ b/MiraclePack/app/src/main/res/layout/fragment_signup.xml
@@ -46,9 +46,9 @@
             android:layout_marginStart="70dp"
             android:layout_marginTop="368dp"
             android:layout_marginEnd="38dp"
-            android:background="#D9D9D9"
+            android:background="@color/houseStyleColor"
             android:text="@string/account_aanmaken"
-            android:textColor="#323232"
+            android:textColor="@color/white"
             android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
