--- a/MiraclePack/app/src/main/res/layout/fragment_passwordreset.xml
+++ b/MiraclePack/app/src/main/res/layout/fragment_passwordreset.xml
@@ -67,9 +67,9 @@
             android:layout_marginStart="70dp"
             android:layout_marginTop="364dp"
             android:layout_marginEnd="38dp"
-            android:background="#D9D9D9"
+            android:background="@color/houseStyleColor"
             android:text="@string/verzenden"
-            android:textColor="#323232"
+            android:textColor="@color/white"
             android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
