--- a/MiraclePack/app/src/main/res/layout/fragment_home.xml
+++ b/MiraclePack/app/src/main/res/layout/fragment_home.xml
@@ -136,6 +136,7 @@
                     android:textStyle="bold" />
 
                 <Button
+                    android:id="@+id/bluetoothAddDevice"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="@dimen/_4sdp"
