Changed all profile page toast messages to dutch and deleted duplicateded messages

--- a/MiraclePack/app/src/main/res/layout/fragment_loginpage.xml
+++ b/MiraclePack/app/src/main/res/layout/fragment_loginpage.xml
@@ -62,7 +62,7 @@
             android:layout_height="48dp"
             android:layout_marginStart="60dp"
             android:layout_marginTop="56dp"
-            android:text="@string/wachtwoord_vergeten"
+            android:text="wachtwoord vergeten"
             android:textSize="15sp"
             android:textStyle="bold"
             android:background="@color/houseStyleColor"
@@ -82,7 +82,7 @@
             android:onClick="openSignUpActivity"
             android:background="@color/houseStyleColor"
             android:textColor="@color/white"
-            android:text="@string/nieuw_account_aanmaken"
+            android:text="nieuw account aanmaken"
             android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
