--- a/MiraclePack/app/src/main/res/layout/my_row.xml
+++ b/MiraclePack/app/src/main/res/layout/my_row.xml
@@ -44,7 +44,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/baseline_circle_24" />
+                app:srcCompat="@drawable/default_circle" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
