--- a/MiraclePack/app/src/main/res/layout/activity_add.xml
+++ b/MiraclePack/app/src/main/res/layout/activity_add.xml
@@ -18,6 +18,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageButton
+        android:id="@+id/backButton"
+        android:layout_width="@dimen/_40sdp"
+        android:layout_height="@dimen/_40sdp"
+        android:layout_margin="@dimen/_5sdp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/toolbar"
+        android:src="@drawable/baseline_arrow_back_24"
+        android:background="@color/houseStyleColor"
+        android:scaleType="fitCenter"
+        android:padding="@dimen/_7sdp"/>
+
     <LinearLayout
         android:id="@+id/groupContainer"
         android:layout_width="match_parent"
