--- a/MiraclePack/app/src/main/res/layout/fragment_profile.xml
+++ b/MiraclePack/app/src/main/res/layout/fragment_profile.xml
@@ -105,6 +105,7 @@
                     android:gravity="center"
                     android:text="Email"
                     android:textColor="@color/mainTextColor"
+                    android:layout_marginStart="@dimen/_4sdp"
                     android:textSize="@dimen/_15sdp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -121,15 +122,29 @@
                 android:backgroundTint="@color/white"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/TelefoonnummerTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/telefoonnummer"
-                    android:textColor="@color/mainTextColor"
-                    android:textSize="@dimen/_15sdp"
-                    android:textStyle="bold" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <EditText
+                        android:id="@+id/TelefoonnummerTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:minHeight="48dp"
+                        android:text="@string/telefoonnummer"
+                        android:textColor="@color/mainTextColor"
+                        android:textSize="@dimen/_15sdp"
+                        android:textStyle="bold" />
+
+                    <ImageView
+                        android:id="@+id/imageViewEditTelefoonnummer"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="0dp"
+                        android:src="@drawable/edit_image_foreground" />
+                </RelativeLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -144,17 +159,33 @@
                 android:backgroundTint="@color/white"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/GeboortedatumTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_4sdp"
-                    android:gravity="center"
-                    android:text="Geboorte datum"
-                    android:textColor="@color/mainTextColor"
-                    android:textSize="@dimen/_15sdp"
-                    android:textStyle="bold" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:id="@+id/GeboortedatumTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_4sdp"
+                        android:gravity="center"
+                        android:minHeight="48dp"
+
+                        android:text="Geboorte datum"
+                        android:textColor="@color/mainTextColor"
+                        android:textSize="@dimen/_15sdp"
+                        android:textStyle="bold" />
+
+                    <ImageView
+                        android:id="@+id/imageViewEditGeboortedatum"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="0dp"
+                        android:src="@drawable/edit_image_foreground" />
+                </RelativeLayout>
             </LinearLayout>
+
 
             <Button
                 android:layout_marginStart="@dimen/_10sdp"
