--- a/MiraclePack/app/src/main/res/layout/fragment_profile.xml
+++ b/MiraclePack/app/src/main/res/layout/fragment_profile.xml
@@ -75,8 +75,8 @@
         <LinearLayout
             android:id="@+id/backpackInfoSection"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_255sdp"
-            android:layout_margin="@dimen/_12sdp"
+            android:layout_height="@dimen/_295sdp"
+            android:layout_margin="@dimen/_10sdp"
             android:background="@drawable/roundstyle"
             android:backgroundTint="@color/houseStyleColor"
             android:orientation="vertical"
@@ -126,7 +126,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                     <EditText
-                        android:id="@+id/TelefoonnummerTextView"
+                        android:id="@+id/TelefoonnummerEditText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -188,9 +188,9 @@
 
 
             <Button
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginEnd="@dimen/_5sdp"
                 android:gravity="center"
                 android:id="@+id/buttonPasswordReset"
                 android:layout_width="@dimen/_230sdp"
@@ -204,11 +204,26 @@
                 android:textStyle="bold">
             </Button>
 
+<!--            <Button-->
+<!--                android:id="@+id/saveButton"-->
+<!--                android:layout_marginStart="@dimen/_5sdp"-->
+<!--                android:layout_marginTop="@dimen/_3sdp"-->
+<!--                android:layout_marginEnd="@dimen/_5sdp"-->
+<!--                android:gravity="center"-->
+<!--                android:layout_width="@dimen/_230sdp"-->
+<!--                android:layout_height="@dimen/_39sdp"-->
+<!--                android:backgroundTint="@color/white"-->
+<!--                android:orientation="vertical"-->
+<!--                android:text="Gegevens opslaan"-->
+<!--                android:textColor="@color/mainTextColor"-->
+<!--                android:textSize="@dimen/_15sdp"-->
+<!--                android:textStyle="bold" />-->
+
             <Button
                 android:id="@+id/buttonSignOut"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_marginTop="@dimen/_3sdp"
+                android:layout_marginEnd="@dimen/_5sdp"
                 android:gravity="center"
                 android:layout_width="@dimen/_150sdp"
                 android:layout_height="@dimen/_39sdp"
