--- a/MiraclePack/app/src/main/res/layout/fragment_passwordreset.xml
+++ b/MiraclePack/app/src/main/res/layout/fragment_passwordreset.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="18dp">
+    android:padding="@dimen/_11sdp">
 
     <FrameLayout
         android:id="@+id/fragment_passwordreset"
@@ -16,19 +16,17 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFFFFF"
-        tools:layout_editor_absoluteX="18dp"
-        tools:layout_editor_absoluteY="18dp">
+        android:background="@color/white">
 
         <EditText
             android:id="@+id/editTextPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="248dp"
+            android:layout_marginTop="@dimen/_191sdp"
             android:autofillHints=""
             android:hint="@string/wachtwoord"
             android:inputType="textPassword"
-            android:minHeight="48dp"
+            android:minHeight="@dimen/_40sdp"
             app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,11 +36,11 @@
             android:id="@+id/editTextRepeatPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="304dp"
+            android:layout_marginTop="@dimen/_230sdp"
             android:autofillHints=""
             android:hint="@string/herhaal_wachtwoord"
             android:inputType="textPassword"
-            android:minHeight="48dp"
+            android:minHeight="@dimen/_40sdp"
             app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -52,25 +50,25 @@
             android:id="@+id/editTextEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="200dp"
+            android:layout_marginTop="@dimen/_152sdp"
             android:autofillHints=""
             android:hint="@string/email"
             android:inputType="textEmailAddress"
-            android:minHeight="48dp"
+            android:minHeight="@dimen/_40sdp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonPasswordReset"
-            android:layout_width="225dp"
+            android:layout_width="@dimen/_200sdp"
             android:layout_height="56dp"
-            android:layout_marginStart="70dp"
-            android:layout_marginTop="364dp"
-            android:layout_marginEnd="38dp"
-            android:background="@color/houseStyleColor"
+            android:layout_marginStart="@dimen/_40sdp"
+            android:layout_marginTop="@dimen/_320sdp"
+            android:background="@drawable/roundstyle"
+            android:backgroundTint="@color/houseStyleColor"
             android:text="@string/verzenden"
             android:textColor="@color/white"
-            android:textSize="15sp"
+            android:textSize="@dimen/_12sdp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.139"
