--- a/MiraclePack/app/src/main/res/layout/fragment_login_container.xml
+++ b/MiraclePack/app/src/main/res/layout/fragment_login_container.xml
@@ -6,6 +6,7 @@
     <FrameLayout
         android:id="@+id/fragment_login_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@color/white"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
